# TubeDistortion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TubeDistortion.filtergraph  TubeDistortion.jucer  compile_commands.json
.cache/clangd/index/: AudioOscilloscope.cpp.F42CED8731FE3FE6.idx  AudioOscilloscope.h.315C4F81458476D5.idx  BinaryData.cpp.A97E0ABE6835AA76.idx  BinaryData.h.70AB15F81526224B.idx  DecibelLitBorder.cpp.C61A78F9A05D2E54.idx  DecibelLitBorder.h.82309A50A5DC87C9.idx  JuceHeader.h.D54A751E6041EB2A.idx  PluginEditor.cpp.2F9B57E54AAABC74.idx  PluginEditor.h.4E6460C68C376A15.idx  PluginGlobals.cpp.417227453E4F31A8.idx  PluginGlobals.h.B0CCA0B9AE02B7BB.idx  PluginProcessor.cpp.33E8C273B6D385A4.idx  PluginProcessor.h.9035C63811C5BB4E.idx  PresetBrowser.cpp.EA74078622A320F7.idx  PresetBrowser.h.D0C0312C77F4DDCB.idx  PresetManager.cpp.005872BA2B1B75F0.idx  PresetManager.h.C677B2D5C9A0748A.idx  StyleSheet.cpp.AD513A7F9157CB02.idx  StyleSheet.h.B4758B8B73465073.idx  TubeDistortion.h.2817E3928DBEC62F.idx  include_juce_audio_basics.cpp.501B1BB8171103C6.idx  (+20 more)
.cmake-lsp-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginGlobals.cpp  PluginGlobals.h  PluginProcessor.cpp  PluginProcessor.h  StyleSheet.cpp  StyleSheet.h
Source/Saturators/: RamperLinear.h  TubeDistortion.h
Source/UITools/: AudioOscilloscope.cpp  AudioOscilloscope.h  DecibelLitBorder.cpp  DecibelLitBorder.h  PresetBrowser.cpp  PresetBrowser.h  PresetManager.cpp  PresetManager.h
TestAudio/Clip Testing/: Clip Testing.flp
(+11 files in other folders)
